# programming

./: .gitignore  Bubble_and_Linear_sort.java  CONTRIBUTING.md  README.md  fibanocci.cpp
C++/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
C++/0-1 Knapsack Problem (Naive)/: 0_1_knapsack_problem_naive.h
C++/0-1 Knapsack Problem (Tabulation)/: 0_1_knapsack_problem_tabulation.cpp
C++/Activity Selector (Greedy Iterative)/: greedy_iterative_activity_selector.h
C++/Arithmetic Progression/: ArithmeticProgression.cpp
C++/DoubleLinkedList/: doublylinkedlists.cpp
C++/Fractional Knapsack Problem (Greedy)/: greedy_fractional_knapsack_problem.cpp
C++/Hashmaps/: Rollinghash.cpp  hashmap.h
C++/LeetCode/: climbing_stairs.cpp  contains_duplicate.cpp  evaluate_reverse_polish_notation.cpp  factorial_trailing_zeroes.cpp  fizz_buzz.cpp  missing_number.cpp  number_of_1_bits.cpp  remove_duplicates_from_sorted_array.cpp  reverse_string.cpp  rotate_array.cpp  single_number.cpp  valid_palindrome.cpp  valid_parentheses.cpp
C++/Levenshtein Distance (Tabulation)/: levenshtein_distance_tabulation.cpp
C++/Linked List/: DLL.cpp  SLL.cpp
C++/Linked Lists/: CircularLinkedList.cpp  DoublyLinkedList.cpp  SinglyLinkedList.cpp
C++/Linked_List_Implementation/: singly_linked_list.cpp
C++/Longest Common Subsequence (Length)/: longest_common_subsequence_length.h
C++/Longest Common Subsequence (Naive)/: longest_common_subsequence_naive.cpp
C++/Longest Increasing Subsequence (Tabulation)/: longest_increasing_subsequence_tabulation.h
C++/Max-Priority Queue (Naive - Unsorted)/: max_priority_queue.cpp
C++/Min-Priority Queue (Naive - Unsorted)/: min_priority_queue.cpp
C++/Partition Problem  (Naive)/: partition_problem_naive.cpp  partition_problem_naive.h
C++/Partition Problem (Tabulation)/: partition_problem_tabulation.cpp
C++/Polynomials (Horner's Method)/: horners_method.cpp
C++/Queue (Linked List)/: queue.cpp
C++/Reverse (A Number)/: reverse.cpp
C++/SPOJsolutions/: BSEARCH1 - Binary search.cpp  INTEST - Enormous Input Test.cpp  STAMPS - Stamps.cpp  spoj_addingRevNum.cpp  spoj_candy3.cpp  spoj_lastdigit.cpp  spoj_nextPalindrome.cpp
CPP/: algos.h
(+897 files in other folders)
